<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.jonny_seitz.simplelibrary.AddActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_book" />

            <Button
                android:id="@+id/add_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addCover"
                android:text="@string/capute_cover" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title">

                <EditText
                    android:id="@+id/title"
                    android:ems="10"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/author">

                <EditText
                    android:id="@+id/author"
                    android:ems="10"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/genre">

                <EditText
                    android:id="@+id/genre"
                    android:ems="10"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description">

                <EditText
                    android:id="@+id/description"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="addBook"
                android:text="Add book" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
