<resources>
    <string name="app_name">SimpleLibrary</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add_book">Add new book</string>
    <string name="book">Book</string>
    <string name="removed">removed</string>
    <string name="undo">Undo</string>

    <string name="capute_cover">Capture Cover image</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="description_text">
        Here will stand a longer description text, which tells a bit more about the book.
    </string>
    <string name="required">This field is required.</string>

    <string name="settings">Settings</string>
    <string name="title_library_name">Library name</string>
    <string name="default_title_library_name">My Library</string>
    <string name="description_library_name">This name will be set as library title.</string>
</resources>
